@@ -1,16 +1,24 @@
 package com.chefsitos.uamishop.ordenes.service;
 
+import com.chefsitos.uamishop.ordenes.controller.dto.OrdenRequest;
 import com.chefsitos.uamishop.ordenes.domain.aggregate.Orden;
 import com.chefsitos.uamishop.ordenes.domain.entity.ItemOrden;
 import com.chefsitos.uamishop.ordenes.domain.valueObject.*;
 import com.chefsitos.uamishop.ordenes.repository.OrdenJpaRepository;
-import com.chefsitos.uamishop.shared.domain.valueObject.Money;
+import com.chefsitos.uamishop.ventas.domain.aggregate.Carrito;
+import com.chefsitos.uamishop.ventas.domain.entity.ItemCarrito;
 import com.chefsitos.uamishop.ventas.domain.valueObject.CarritoId;
+import com.chefsitos.uamishop.ventas.domain.valueObject.ProductoRef;
+import com.chefsitos.uamishop.ventas.service.CarritoService;
+import com.chefsitos.uamishop.shared.domain.valueObject.Money;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.lang.reflect.Field;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * Servicio de aplicación para el Bounded Context "Órdenes".
@@ -20,20 +28,31 @@ import java.util.UUID;
 public class OrdenService {
 
   private final OrdenJpaRepository ordenRepository;
+  private final CarritoService carritoService;
 
-  public OrdenService(OrdenJpaRepository ordenRepository) {
+  public OrdenService(OrdenJpaRepository ordenRepository, CarritoService carritoService) {
     this.ordenRepository = ordenRepository;
+    this.carritoService = carritoService;
   }
 
   /**
    * Crea una nueva orden a partir del request.
-   * Construye DireccionEnvio e ItemOrden desde el request
-   * Crea la orden
-   * Persiste y devuelve el agregado Orden
+   * Construye DireccionEnvio e ItemOrden desde el request.
+   * Crea la orden.
+   * Persiste y devuelve el agregado Orden.
    */
   public Orden crear(OrdenRequest request) {
     if (request == null) {
       throw new IllegalArgumentException("OrdenRequest no puede ser null");
+    }
+    if (request.items() == null || request.items().isEmpty()) {
+      throw new IllegalArgumentException("La orden debe tener al menos un item");
+    }
+    if (request.numeroOrden() == null || request.numeroOrden().isBlank()) {
+      throw new IllegalArgumentException("numeroOrden es obligatorio");
+    }
+    if (request.clienteId() == null) {
+      throw new IllegalArgumentException("clienteId es obligatorio");
     }
 
     DireccionEnvio direccion = new DireccionEnvio(
@@ -54,7 +73,7 @@ public class OrdenService {
             i.sku(),
             i.cantidad(),
             i.precioUnitario()))
-        .toList();
+        .collect(Collectors.toList());
 
     Orden orden = new Orden(
         OrdenId.generar(),
@@ -67,24 +86,119 @@ public class OrdenService {
   }
 
   /**
-   * Crea una orden desde un carrito.
-   * Obtiene el carrito vía CarritoService
-   * Convierte ítems a ItemOrden
-   * Crea la orden, persiste
-   * Llama a completarCheckout del carrito
+   * Crea una orden desde un carrito
    *
-   * Estado actual:
-   * Pendiente porque NO existe CarritoService
-   * Se deja el método con la firma requerida para integrarlo después.
+   * pedido:
+   * 1) Obtiene el carrito vía CarritoService
+   * 2) Convierte items del carrito a ItemOrden
+   * 3) Crea la orden, persiste
+   * 4) Llama completarCheckout del carrito
+   *
+   * Nota: Carrito y ItemCarrito no exponen getters para
+   * items/clienteId/cantidad/precioUnitario.
+   * Para NO tocar esas clases, se usa reflexión.
    */
   public Orden crearDesdeCarrito(CarritoId carritoId, DireccionEnvio direccionEnvio) {
-    throw new UnsupportedOperationException(
-        "Pendiente: requiere CarritoService (módulo ventas) para implementar crearDesdeCarrito.");
+    if (carritoId == null) {
+      throw new IllegalArgumentException("carritoId es obligatorio");
+    }
+    if (direccionEnvio == null) {
+      throw new IllegalArgumentException("direccionEnvio es obligatoria");
+    }
+
+    // 1) Obtener carrito
+    Carrito carrito = carritoService.obtenerCarrito(carritoId);
+    if (carrito == null) {
+      throw new IllegalArgumentException("No existe el carrito: " + carritoId);
+    }
+
+    // 2) Sacar clienteId e items
+    com.chefsitos.uamishop.ventas.domain.valueObject.ClienteId clienteIdVentas = readField(carrito, "clienteId",
+        com.chefsitos.uamishop.ventas.domain.valueObject.ClienteId.class);
+
+    @SuppressWarnings("unchecked")
+    List<ItemCarrito> itemsCarrito = (List<ItemCarrito>) readField(carrito, "items", List.class);
+
+    if (clienteIdVentas == null) {
+      throw new IllegalStateException("El carrito no tiene clienteId (no se puede crear la orden)");
+    }
+    if (itemsCarrito == null || itemsCarrito.isEmpty()) {
+      throw new IllegalStateException("El carrito no tiene items (no se puede crear la orden)");
+    }
+
+    // 3) Convertir items de carrito -> items de orden
+    List<ItemOrden> itemsOrden = itemsCarrito.stream()
+        .map(this::mapItemCarritoAItemOrdenSinGetters)
+        .collect(Collectors.toList());
+
+    // 4) Crear Orden
+    String numeroOrden = "ORD-" + carritoId.getValue().toString().substring(0, 8).toUpperCase();
+    ClienteId clienteIdOrden = new ClienteId(clienteIdVentas.getValue());
+
+    Orden orden = new Orden(
+        OrdenId.generar(),
+        numeroOrden,
+        clienteIdOrden,
+        itemsOrden,
+        direccionEnvio);
+
+    // 5) Persistir
+    Orden guardada = ordenRepository.save(orden);
+
+    // 6) Completar checkout
+    carritoService.completarCheckout(carritoId);
+
+    return guardada;
+  }
+
+  private ItemOrden mapItemCarritoAItemOrdenSinGetters(ItemCarrito itemCarrito) {
+    if (itemCarrito == null) {
+      throw new IllegalArgumentException("ItemCarrito no puede ser null");
+    }
+
+    ProductoRef producto = itemCarrito.getProducto();
+    if (producto == null) {
+      throw new IllegalStateException("ItemCarrito sin producto (ProductoRef)");
+    }
+
+    Integer cantidad = readField(itemCarrito, "cantidad", Integer.class);
+    Money precioUnitario = readField(itemCarrito, "precioUnitario", Money.class);
+
+    if (cantidad == null || cantidad <= 0) {
+      throw new IllegalStateException("Cantidad inválida en ItemCarrito");
+    }
+    if (precioUnitario == null) {
+      throw new IllegalStateException("precioUnitario es null en ItemCarrito");
+    }
+
+    return new ItemOrden(
+        ItemOrdenId.generar(),
+        producto.productoId().toString(), // en Orden lo manejas como String
+        producto.nombreProducto(),
+        producto.sku(),
+        cantidad,
+        precioUnitario);
   }
 
   /**
-   * Busca una orden por UUID. Lanza excepción si no existe.
+   * Lee un campo privado por reflexión SIN modificar la clase.
    */
+  @SuppressWarnings("unchecked")
+  private static <T> T readField(Object target, String fieldName, Class<T> type) {
+    try {
+      Field f = target.getClass().getDeclaredField(fieldName);
+      f.setAccessible(true);
+      Object value = f.get(target);
+      if (value == null)
+        return null;
+      return (T) value;
+    } catch (NoSuchFieldException e) {
+      throw new IllegalStateException("No existe el campo '" + fieldName + "' en " + target.getClass().getName(), e);
+    } catch (IllegalAccessException e) {
+      throw new IllegalStateException("No se pudo acceder al campo '" + fieldName + "'", e);
+    }
+  }
+
   @Transactional(readOnly = true)
   public Orden buscarPorId(UUID id) {
     if (id == null) {
@@ -94,27 +208,17 @@ public class OrdenService {
         .orElseThrow(() -> new IllegalArgumentException("Orden no encontrada: " + id));
   }
 
-  /**
-   * Devuelve todas las órdenes persistidas.
-   */
   @Transactional(readOnly = true)
   public List<Orden> buscarTodas() {
     return ordenRepository.findAll();
   }
 
-  /**
-   * Confirma una orden (solo si está en PENDIENTE; lo valida el agregado).
-   */
   public Orden confirmar(UUID id) {
     Orden orden = buscarPorId(id);
     orden.confirmar();
     return ordenRepository.save(orden);
   }
 
-  /**
-   * Procesa el pago de una orden (solo si está CONFIRMADA; lo valida el
-   * agregado).
-   */
   public Orden procesarPago(UUID id, String referenciaPago) {
     if (referenciaPago == null || referenciaPago.isBlank()) {
       throw new IllegalArgumentException("La referenciaPago es obligatoria");
@@ -124,22 +228,12 @@ public class OrdenService {
     return ordenRepository.save(orden);
   }
 
-  /**
-   * Marca una orden en proceso (solo si está PAGO_PROCESADO; lo valida el
-   * agregado).
-   */
   public Orden marcarEnProceso(UUID id) {
     Orden orden = buscarPorId(id);
     orden.marcarEnProceso();
     return ordenRepository.save(orden);
   }
 
-  /**
-   * Marca una orden como enviada.
-   * InfoEnvio, pero tu agregado Orden expone:
-   * marcarEnviada(String guiaEnvio)
-   * Por eso aquí se adapta usando infoEnvio.numeroGuia().
-   */
   public Orden marcarEnviada(UUID id, InfoEnvio infoEnvio) {
     if (infoEnvio == null) {
       throw new IllegalArgumentException("infoEnvio es obligatorio");
@@ -149,18 +243,12 @@ public class OrdenService {
     return ordenRepository.save(orden);
   }
 
-  /**
-   * Marca una orden como entregada (solo si está ENVIADA; lo valida el agregado).
-   */
   public Orden marcarEntregada(UUID id) {
     Orden orden = buscarPorId(id);
     orden.marcarEntregada();
     return ordenRepository.save(orden);
   }
 
-  /**
-   * Cancela una orden con un motivo (restricciones las valida el agregado).
-   */
   public Orden cancelar(UUID id, String motivo) {
     if (motivo == null || motivo.isBlank()) {
       throw new IllegalArgumentException("El motivo es obligatorio");
